<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.faimizufarov.simbirtraining.language_tasks.kotlin1.MainActivity">
    <item
        android:id="@+id/action_news"
        android:orderInCategory="100"
        android:icon="@drawable/news_24"
        android:title="@string/action_news"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/search_24"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:icon="@drawable/help_24"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:icon="@drawable/history_24"
        android:title="@string/action_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:icon="@drawable/profile_24"
        android:title="@string/action_profile"
        android:enabled="true"
        app:showAsAction="ifRoom" />

</menu>