<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".java.presentation.ui.screens.search.SearchViewPagerEventsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEventsViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <ImageView
        android:id="@+id/imageViewZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_zoom"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textViewWriteKeyWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_key_words"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/black_70" />

    <LinearLayout
        android:id="@+id/linearLayoutKeyWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_words_examples"
            android:textColor="@color/leaf" />

    </LinearLayout>

</LinearLayout>